# game-project

./: CMakeLists.txt
assets/fonts/Montserrat/: montserrat  montserrat.csv  montserrat.json
assets/shaders/: test.frag  test.vert
include/: game.hpp  input.hpp
include/graphics/: renderer.hpp  shader.hpp  text.hpp
include/math/: affine_transform.hpp  vector.hpp
src/: game.cpp  input.cpp  main.cpp
src/graphics/: shader.cpp
src/math/: affine_transform.cpp
